Main age logic completed, allows user the input their age and then has it output to the respected part of the website.

--- a/src/index.html
+++ b/src/index.html
@@ -36,19 +36,54 @@
             </div>
         </scroll-page>
         <scroll-page id="page-2">
-            <p>Earth</p>
+            <div class="planetWrapper">
+                <div>
+                    <p>Earth</p>
+                </div>
+                <div>
+                    <p id="earthInfo"></p>
+                </div>
+            </div>
         </scroll-page>
         <scroll-page id="page-3">
-            <p>Mercury</p>
+            <div class="planetWrapper">
+                <div>
+                    <p>Mercury</p>
+                </div>
+                <div>
+                    <p id="mercuryInfo"></p>
+                </div>
+            </div>
         </scroll-page>
         <scroll-page id="page-4">
-            <p>Venus</p>
+            <div class="planetWrapper">
+                <div>
+                    <p>Venus</p>
+                </div>
+                <div>
+                    <p id="venusInfo"></p>
+                </div>
+            </div>
         </scroll-page>
         <scroll-page id="page-5">
-            <p>Mars</p>
+            <div class="planetWrapper">
+                <div>
+                    <p>Mars</p>
+                </div>
+                <div>
+                    <p id="marsInfo"></p>
+                </div>
+            </div>
         </scroll-page>
         <scroll-page id="page-6">
-            <p>Jupiter</p>
+            <div class="planetWrapper">
+                <div>
+                    <p>Jupiter</p>
+                </div>
+                <div>
+                    <p id="jupiterInfo"></p>
+                </div>
+            </div>
         </scroll-page>
     </scroll-container>
 </body>
