Finished logic for these problems: Your age on all planets, and your remaining life expectancy on all planets. Also refactored the planets.js code to allow for planets to inherit one method from PlantYears instead of having their own calculateYear method.

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,21 @@
                         <input id="userName" type="text" required></input><br>
                         <label for="userAge">Enter your Age:</label>
                         <input id="userAge" type="text" required></input><br>
+                        <label for="userCountry">Do you live in a World Leading Country?</label>
+                        <select id="userCountry">
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select><br>
+                        <label for="userEat">Do you eat healthy??</label>
+                        <select id="userEat">
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select><br>
+                        <label for="userExercise">Do you exercise regularly?</label>
+                        <select id="userExercise">
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select><br>
                         <button class="button" type='submit'>Submit</button>
                     </form>
                 </div>
@@ -41,7 +56,8 @@
                     <p>Earth</p>
                 </div>
                 <div>
-                    <p id="earthInfo"></p>
+                    <p id="earthInfo"></p><br>
+                    <p id="earthLifeInfo"></p>
                 </div>
             </div>
         </scroll-page>
@@ -51,7 +67,8 @@
                     <p>Mercury</p>
                 </div>
                 <div>
-                    <p id="mercuryInfo"></p>
+                    <p id="mercuryInfo"></p><br>
+                    <p id="mercuryLifeInfo"></p>
                 </div>
             </div>
         </scroll-page>
@@ -61,7 +78,8 @@
                     <p>Venus</p>
                 </div>
                 <div>
-                    <p id="venusInfo"></p>
+                    <p id="venusInfo"></p><br>
+                    <p id="venusLifeInfo"></p>
                 </div>
             </div>
         </scroll-page>
@@ -71,7 +89,8 @@
                     <p>Mars</p>
                 </div>
                 <div>
-                    <p id="marsInfo"></p>
+                    <p id="marsInfo"></p><br>
+                    <p id="marsLifeInfo"></p>
                 </div>
             </div>
         </scroll-page>
@@ -81,7 +100,8 @@
                     <p>Jupiter</p>
                 </div>
                 <div>
-                    <p id="jupiterInfo"></p>
+                    <p id="jupiterInfo"></p><br>
+                    <p id="jupiterLifeInfo"></p>
                 </div>
             </div>
         </scroll-page>
