Refactored the front end logic to check if the user has or has not lived beyond life expectancy, and outputs their remaining life expectancy on the given stellar body, or if they have lived beyond their life expectancy on the given stellar body.

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div>
                     <p id="earthInfo"></p><br>
-                    <p id="earthLifeInfo"></p>
+                    <p id="earthLifeInfo"></p><br>
                 </div>
             </div>
         </scroll-page>
@@ -68,7 +68,7 @@
                 </div>
                 <div>
                     <p id="mercuryInfo"></p><br>
-                    <p id="mercuryLifeInfo"></p>
+                    <p id="mercuryLifeInfo"></p><br>
                 </div>
             </div>
         </scroll-page>
@@ -79,7 +79,7 @@
                 </div>
                 <div>
                     <p id="venusInfo"></p><br>
-                    <p id="venusLifeInfo"></p>
+                    <p id="venusLifeInfo"></p><br>
                 </div>
             </div>
         </scroll-page>
@@ -90,7 +90,7 @@
                 </div>
                 <div>
                     <p id="marsInfo"></p><br>
-                    <p id="marsLifeInfo"></p>
+                    <p id="marsLifeInfo"></p><br>
                 </div>
             </div>
         </scroll-page>
@@ -101,7 +101,7 @@
                 </div>
                 <div>
                     <p id="jupiterInfo"></p><br>
-                    <p id="jupiterLifeInfo"></p>
+                    <p id="jupiterLifeInfo"></p><br>
                 </div>
             </div>
         </scroll-page>
