Converted Age Int to DateTime object, and the program now calculated age based on the current year and birth year. Also formatted the file structure to a more professional format. Added file-loader to webpack to allow for loading of images.

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
                     <form id="userForm">
                         <label for="userName">Enter your Name:</label>
                         <input id="userName" type="text" required></input><br>
-                        <label for="userAge">Enter your Age:</label>
-                        <input id="userAge" type="text" required></input><br>
+                        <label for="userAge">Enter your Birthday:</label>
+                        <input id="userAge" type="date" required></input><br>
                         <label for="userCountry">Do you live in a World Leading Country?</label>
                         <select id="userCountry">
                             <option value="yes">Yes</option>
@@ -42,6 +42,11 @@
                         </select><br>
                         <label for="userExercise">Do you exercise regularly?</label>
                         <select id="userExercise">
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select><br>
+                        <label for="userExercise">Are you a dog?</label>
+                        <select id="userDog">
                             <option value="yes">Yes</option>
                             <option value="no">No</option>
                         </select><br>
